[package]
name = "svfmt"
version = "0.1.0"
edition = "2021"
description = "Format SystemVerilog code"
keywords = ["development","format","SystemVerilog","eda"]

[dependencies]
sv-parser = {git = "https://gitee.com/xuzhenyu69/sv-parser",rev="82ecd16"}
# sv-parser = {git = "https://github.com/erihsu/sv-parser"}
structopt = "0.3"

