[package]
name = "svfmt"
authors = ["erihsu"]
version = "0.1.0"
edition = "2021"
description = "Format SystemVerilog code"
keywords = ["development","format","SystemVerilog","eda"]

[dependencies]
sv-parser = {git = "https://gitee.com/xuzhenyu69/sv-parser",rev="82ecd16"}
# sv-parser = {git = "https://github.com/erihsu/sv-parser"}
clap = {version = "3.1", features = ["derive"]}
verilog-filelist-parser = "0.1.2"
termcolor = "1.1.3"

